syntax = "proto3";

// Public API for Hyades vulnerability analysis.
package org.dependencytrack.vulnanalysis.v1;

import "org/cyclonedx/v1_6/cyclonedx.proto";

option java_multiple_files = true;
option java_package = "org.dependencytrack.proto.vulnanalysis.v1";

message Component {
  // UUID of the component in the Dependency-Track database.
  // In case of an untracked component, a random UUID may be used.
  string uuid = 1;

  // Common Platform Enumeration (CPE) of the component.
  optional string cpe = 2;

  // Package URL (PURL) of the component.
  optional string purl = 3;

  // Software Identification (SWID) Tag ID of the component.
  optional string swid_tag_id = 4;

  // Whether the component is internal to the organization.
  // Internal components should not be looked up in external sources.
  optional bool internal = 5;
}

enum Scanner {
  SCANNER_UNSPECIFIED = 0;
  SCANNER_NONE = 1;
  SCANNER_INTERNAL = 2;
  SCANNER_OSSINDEX = 3;
  SCANNER_SNYK = 4;
  SCANNER_CSAF = 5;
}

message ScanCommand {
  // Component that shall be scanned.
  Component component = 1;
}

message ScanKey {
  // A (preferably) random correlation token in arbitrary format.
  string scan_token = 1;

  // UUID of the component in the Dependency-Track database.
  string component_uuid = 2;
}

message ScannerResult {

  reserved 3;

  // The scanner that produced this result.
  Scanner scanner = 1;

  // Status of the scan.
  ScanStatus status = 2;

  // Vulnerabilities identified in the scan.
  // repeated org.dependencytrack.vuln.v1.Vulnerability vulnerabilities = 3;

  // Reason for scan failure.
  optional string failure_reason = 4;

  // Bov identified in the scan.
  org.cyclonedx.v1_6.Bom bom = 5;
}

message ScanResult {
  // Key of the scan.
  // Redundant, because results are keyed by ScanKey anyway.
  // The key is included to make processing and re-keying of
  // results smoother for consumers.
  ScanKey key = 1;

  // Results of all applicable scanners.
  repeated ScannerResult scanner_results = 2;
}

enum ScanStatus {
  SCAN_STATUS_UNSPECIFIED = 0;
  SCAN_STATUS_SUCCESSFUL = 1;
  SCAN_STATUS_FAILED = 2;
  SCAN_STATUS_PENDING = 3;
}
