package org.hyades;

import io.quarkus.test.common.QuarkusTestResource;
import io.quarkus.test.junit.QuarkusIntegrationTest;
import io.quarkus.test.junit.QuarkusTestProfile;
import io.quarkus.test.junit.TestProfile;
import io.quarkus.test.kafka.InjectKafkaCompanion;
import io.quarkus.test.kafka.KafkaCompanionResource;
import io.smallrye.reactive.messaging.kafka.companion.KafkaCompanion;
import org.apache.kafka.clients.consumer.ConsumerRecord;
import org.apache.kafka.clients.producer.ProducerRecord;
import org.hyades.common.KafkaTopic;
import org.hyades.proto.KafkaProtobufSerde;
import org.hyades.proto.vuln.v1.Severity;
import org.hyades.proto.vuln.v1.Source;
import org.hyades.proto.vulnanalysis.v1.Component;
import org.hyades.proto.vulnanalysis.v1.ScanCommand;
import org.hyades.proto.vulnanalysis.v1.ScanKey;
import org.hyades.proto.vulnanalysis.v1.ScanResult;
import org.hyades.proto.vulnanalysis.v1.ScanStatus;
import org.hyades.proto.vulnanalysis.v1.Scanner;
import org.junit.jupiter.api.Test;

import java.time.Duration;
import java.util.Map;
import java.util.UUID;

import static org.assertj.core.api.Assertions.assertThat;

@QuarkusIntegrationTest
@QuarkusTestResource(KafkaCompanionResource.class)
@TestProfile(VulnerabilityAnalyzerIT.TestProfile.class)
class VulnerabilityAnalyzerIT {

    public static class TestProfile implements QuarkusTestProfile {

        @Override
        public Map<String, String> getConfigOverrides() {
            return Map.of(
                    "scanner.internal.enabled", "true",
                    "scanner.ossindex.enabled", "true",
                    "scanner.snyk.enabled", "false",
                    "quarkus.kafka.snappy.enabled", "true",
                    "scanner.ossindex.batch-size", "1"
            );
        }
    }

    @InjectKafkaCompanion
    KafkaCompanion kafkaCompanion;

    @Test
    void test() {
        final var component = Component.newBuilder()
                .setUuid(UUID.randomUUID().toString())
                .setPurl("pkg:maven/org.yaml/snakeyaml@1.33")
                .build();
        final var scanCommand = ScanCommand.newBuilder()
                .setComponent(component)
                .build();
        final var scanKey = ScanKey.newBuilder()
                .setScanToken(UUID.randomUUID().toString())
                .setComponentUuid(component.getUuid())
                .build();

        kafkaCompanion
                .produce(new KafkaProtobufSerde<>(ScanKey.parser()), new KafkaProtobufSerde<>(ScanCommand.parser()))
                .fromRecords(new ProducerRecord<>(KafkaTopic.VULN_ANALYSIS_COMPONENT.getName(), scanKey, scanCommand));

        final ConsumerRecord<ScanKey, ScanResult> result = kafkaCompanion
                .consume(new KafkaProtobufSerde<>(ScanKey.parser()), new KafkaProtobufSerde<>(ScanResult.parser()))
                .fromTopics(KafkaTopic.VULN_ANALYSIS_RESULT.getName(), 1, Duration.ofSeconds(15))
                .awaitCompletion()
                .getFirstRecord();

        assertThat(result.key()).isEqualTo(scanKey);
        assertThat(result.value().getKey()).isEqualTo(scanKey);
        assertThat(result.value().getScannerResultsList()).satisfiesExactlyInAnyOrder(
                scannerResult -> {
                    assertThat(scannerResult.getStatus()).isEqualTo(ScanStatus.SCAN_STATUS_SUCCESSFUL);
                    assertThat(scannerResult.getScanner()).isEqualTo(Scanner.SCANNER_INTERNAL);
                    assertThat(scannerResult.getVulnerabilitiesCount()).isZero();
                    assertThat(scannerResult.hasFailureReason()).isFalse();
                },
                scannerResult -> {
                    assertThat(scannerResult.getStatus()).isEqualTo(ScanStatus.SCAN_STATUS_SUCCESSFUL);
                    assertThat(scannerResult.getScanner()).isEqualTo(Scanner.SCANNER_OSSINDEX);
                    assertThat(scannerResult.getVulnerabilitiesCount()).isEqualTo(1);
                    assertThat(scannerResult.hasFailureReason()).isFalse();
                    var vuln = scannerResult.getVulnerabilities(0);
                    assertThat(vuln.getId()).isEqualTo("CVE-2022-1471");
                    assertThat(vuln.getSource()).isEqualTo(Source.SOURCE_NVD);
                    assertThat(vuln.getTitle()).isEqualTo("[CVE-2022-1471] CWE-502: Deserialization of Untrusted Data");
                    assertThat(vuln.getRatings(0).getScore()).isEqualTo(9.8);
                    assertThat(vuln.getRatings(0).getSeverity()).isEqualTo(Severity.SEVERITY_CRITICAL);
                    assertThat(vuln.getCwes(0)).isEqualTo(502);
                }
        );
    }

}
